services overflow fixed

--- a/scss/services/styles.scss
+++ b/scss/services/styles.scss
@@ -42,11 +42,12 @@
             h1 {
                 position: absolute;
                 font-size: 70px;
-                width: 100%;
+                width: 96%;
+                padding: 0 2%;
                 color: white;
                 //text-shadow: 5px 5px 5px var(--secondary-color);
                 z-index: 3;
-                margin-right: 50px;
+                // margin-right: 50px;
             }
         }
 
@@ -54,9 +55,10 @@
             width: 50%;
             display: flex;
             flex-direction: column;
+            align-items: center;
             
             p {
-                margin-left: 50px;
+                // margin-left: 50px;
                 width: 500px;
                 font-size: 18px;
             }
@@ -80,9 +82,10 @@
             height: 600px;
             width: 90%;
             margin: 50px 5% 50px 5%;
+            align-items: flex-start;
             h1 {
                 font-size: 50px;
-                margin-top: -400px;
+                margin-top: 40px;
             }
 
             .img-box {
@@ -111,7 +114,7 @@
 
     @media screen and (max-width: 700px) {
         .picture-title {
-            height: 600px;
+            height: 650px;
             width: 90%;
             margin: 50px 5% 50px 5%;
             
@@ -124,13 +127,11 @@
             
             h1 {
                 font-size: 40px;
-                margin-top: -400px;
             }
         }
 
         .content {
-            width: 100%;
-            margin-left: 10%;
+            width: 90%;
             margin-top: 50px;
 
             p {
@@ -169,7 +170,6 @@
 
             p{
                 text-align: center;
-                margin-left: -10%;
                 margin-right: 0;
             }
         }
